# v

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md  v.vcd
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
cmake/: FindVerilator.cmake  utility.cmake
design/: CMakeLists.txt
design/rtl/: v.sv  v_init.sv  v_pipe_query.sv  v_pipe_update.sv  v_pipe_update_exe.sv  v_pkg.vh  v_pkg.vh.in  v_query_pipe.sv  v_update_pipe.sv
design/rtl/common/: cmp.sv  dec.sv  lzd.sv  mask.sv  mux.sv  pri.sv  vld.sv
design/rtl/pd/: sram1r1w.sv
design/tb/: CMakeLists.txt  cfg.h.in  directed.cc  tb.cc  tb.h  tb.sv  v_pkg.vh.in
design/tb/cfg_0/: CMakeLists.txt  cfg_0.cc
design/tb/cfg_1/: CMakeLists.txt  cfg_1.cc
design/tb/v/: common_defs.vh
design/tb/v/pd/: sram1r1w.sv
lib/: common_defs.vh  dff.sv  dffen.sv  dffr.sv  lib.cmake
rtl/: cfg.vlt  cfg_pkg.vh.in  rtl.cmake  v.sv  v_init.sv  v_pipe_query.sv  v_pipe_update.sv  v_pipe_update_cmp.sv  v_pipe_update_exe.sv  v_pkg.vh  v_pkg.vh.in
rtl/common/: cla.sv  cmp.sv  dec.sv  lzd.sv  macros.vh  mask.sv  mux.sv  pri.sv  unmacros.vh
tb/: CMakeLists.txt  cfg.h.in  common.h  directed.cc  driver.cc  log.cc  log.h  mdl.cc  mdl.h  model.cc  model.h  opts.h  rnd.cc  rnd.h  sim..cc  sim.h  tb.cc  tb.h  tb.sv  test.cc  test.h
tb/sva/: dffen_sva.sv  sva.cmake  sva.sv  sva.vh  sva_dffen.sv  sva_mux.sv  sva_v.sv  unsva.vh  v_sva.sv
tb/tests/: directed.cc  directed.h  regress.cc  regress.h  reset.cc  reset.h  smoke_cmds.cc  smoke_cmds.h
tb/v/: common_defs.vh
tb/v/pd/: sram1r1w.sv
